# ChibiOS-CMake-Template

./: .gitignore  .gitmodules  README.md
os/common/startup/ARMCMx/compilers/GCC/: vectors.S
os/common/startup/ARMCMx/compilers/GCC/ld/: STM32F103x6.ld
templates/F103/: CMakeLists.txt  ChibiOS.cmake  main.cpp  mcuconf.h
templates/F103/config/: compile_options.cmake  stm32f1x-cmsis-dap.cfg  stm32f1x.cfg
templates/F103/examples/STM32F103RCT6/A_PWMTest/: board.h  halconf.h  main.cpp  usbcfg.c
templates/F103/examples/STM32F103RCT6/B_CANTest/: board.h  can_interface.cpp  can_interface.h  halconf.h  main.cpp  mcuconf.h  shellconf.h
templates/F334/: CMakeLists.txt  ChibiOS.cmake
templates/F334/config/: compile_options.cmake  stm32f3x-cmsisdap.cfg  stm32f3x.cfg
templates/F334/examples/STM32F334C8T6/A_CANTest/: board.h  can_interface.cpp  halconf.h  main.cpp  mcuconf.h
templates/F407/: CMakeLists.txt  ChibiOS.cmake  board.h  can_interface.cpp  main.cpp  mcuconf.h
templates/F407/config/: compile_options.cmake  stm32f4x-cmsisdap.cfg  stm32f4x.cfg  toolchain.cmake
templates/F407/examples/STM32F429IGT6/A_CANTest/: board.h  can_interface.h  main.cpp  mcuconf.h  usbcfg.c
templates/F407/examples/STM32F429IGT6/B_FMCTest/: board.h  fmc.c  fmc.h  lcd9341.c  lcd9341.h  main.cpp
templates/F407/examples/STM32F429IGT6/C_DMAUARTTest/: board.h  halconf.h  main.cpp  mcuconf.h
